test/objects/Shortlisted_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Match_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match Preference</label>
        <referenceTo>Match_Preference__c</referenceTo>
        <relationshipName>Shortlisted_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shortlisted Profile</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Shortlisted Profiles</relationshipLabel>
        <relationshipName>Shortlisted_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shortlisted_By__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Match_Preference__r.Profile__c , Match_Preference__r.Profile__r.Name,
&quot;_blank&quot; )</formula>
        <label>Shortlisted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shortlisted</fullName>
                    <default>true</default>
                    <label>Shortlisted</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shortlisted Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Match_Preference__c</columns>
        <columns>Profile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SID-{0000}</displayFormat>
        <label>Shortlisted Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shortlisted Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>